--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- <script src="script.js"></script> -->
     <link rel="shortcut icon" href="content/ehsanelderly_LOGO-transparent.ico" type="image/x-icon">
     <title>مرکز روزانه سالمندان احسان</title>
 </head>
@@ -26,7 +27,6 @@
                 <div class="loginbtn"><a href="#">ورود</a></div>
                 <div class="signupbtn"><a href="#">ثبت نام</a></div>
             </div>
-
         </div>
     </header>
     <main>
