Footer right wrap Fixed

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 1402 | کلیه حقوق محفوظ میباشد. </p>
+                <p>&copy; 1402 | کلیه حقوق محفوظ میباشد </p>
                 <p class="designers">&#40;: Designed By <a href="https://github.com/asdf-ITeam">asdf Team</a></p>
             </div>
         </footer>
