Login page design Completed 🙂!

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </nav>
             <div class="login_signup">
-                <div class="loginbtn"><a href="#">ورود</a></div>
+                <div class="loginbtn"><a href="login/login.html">ورود</a></div>
                 <div class="signupbtn"><a href="#">ثبت نام</a></div>
             </div>
         </div>
