SignUp , Gallery, article pages and Link are Done!

--- a/article.html
+++ b/article.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="content/ehsanelderly_LOGO-transparent.ico" type="image/x-icon">
-    <title>مرکز روزانه سالمندان احسان</title>
+    <title>مقالات</title>
 </head>
 <body>
     <header>
@@ -13,18 +13,18 @@
             <nav class="navbar">
                 <div class="header">
                     <ul>
-                        <li class="logo_image"><img src="content/ehsanelderly_LOGO.png" alt="logo"></li>
-                        <li class="home_nav"><a href="#">خانه</a></li>
-                        <li class="gallery_nav"><a href="#">گالری عکس</a></li>
-                        <li class="article_nav"><a href="#">مقالات</a></li>
+                        <li class="logo_image"><a href="index.html" id="logo-header"><img src="content/ehsanelderly_LOGO.png" alt="logo"></a></li>
+                        <li class="home_nav"><a href="index.html">خانه</a></li>
+                        <li class="gallery_nav"><a href="gallery/gallery.html">گالری عکس</a></li>
+                        <li class="article_nav"><a href="article.html">مقالات</a></li>
                         <li class="about_nav"><a href="#">درباره ما</a></li>
                         <li class="contact_nav"><a href="#">تماس با ما</a></li>
                     </ul>
                 </div>
             </nav>
             <div class="login_signup">
-                <div class="loginbtn"><a href="#">ورود</a></div>
-                <div class="signupbtn"><a href="#">ثبت نام</a></div>
+                <div class="loginbtn"><a href="login/login.html">ورود</a></div>
+                <div class="signupbtn"><a href="signup/signup.html">ثبت نام</a></div>
             </div>
 
         </div>
