--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <nav class="navbar">
                 <div class="header">
                     <ul>
-                        <li class="logo_image"><img src="content/ehsanelderly_LOGO.png" alt="logo"></li>
-                        <li class="home_nav"><a href="#">خانه</a></li>
-                        <li class="gallery_nav"><a href="#">گالری عکس</a></li>
-                        <li class="article_nav"><a href="#">مقالات</a></li>
+                        <li class="logo_image"><a href="index.html" id="logo-header"><img src="content/ehsanelderly_LOGO.png" alt="logo"></a></li>
+                        <li class="home_nav"><a href="index.html">خانه</a></li>
+                        <li class="gallery_nav"><a href="gallery/gallery.html">گالری عکس</a></li>
+                        <li class="article_nav"><a href="article.html">مقالات</a></li>
                         <li class="about_nav"><a href="#">درباره ما</a></li>
                         <li class="contact_nav"><a href="#">تماس با ما</a></li>
                     </ul>
@@ -25,7 +25,7 @@
             </nav>
             <div class="login_signup">
                 <div class="loginbtn"><a href="login/login.html">ورود</a></div>
-                <div class="signupbtn"><a href="#">ثبت نام</a></div>
+                <div class="signupbtn"><a href="signup/signup.html">ثبت نام</a></div>
             </div>
         </div>
     </header>
@@ -44,7 +44,7 @@
                 <div class="activitybox"><span>box title</span></div>
                 <div class="activitybox"><span>box title</span></div>
             </div>
-            <div class="minigall_title"><div class="title_box"><a href="#">گالری</a></div></div>
+            <div class="minigall_title"><div class="title_box"><a href="gallery/gallery.html">گالری</a></div></div>
             <div class="mini_gallery">
                 <ul>
                     <li><a href="#"><img width="100%" src="content/Free-vector-grandma.svg" alt="gallery image"></a></li>
@@ -56,7 +56,7 @@
                 </ul>
             </div>
             <div class="container_signup">
-                <div class="container_signupbtn"><div><a href="#">ثبت نام</a></div></div>
+                <div class="container_signupbtn"><div><a href="signup/signup.html">ثبت نام</a></div></div>
                 <div class="container_backimg"><img src="content/maincontent_img2.png" alt=""></div>
             </div>
         </div>
