--- a/login/login.html
+++ b/login/login.html
@@ -39,12 +39,10 @@
                     </div>
                 </div>
                 <div class="link-signup">
-                    <span class="section1">حساب کاربری ندارید؟ <a href="#">ثبت نام</a></span>
-                </div>
-                
+                    <span class="section1">حساب کاربری ندارید؟ <a href="../signup/signup.html">ثبت نام</a></span>
+                </div>                
             </form>
         </div>
-        <!-- <div class="vector"><img src="../content/Vector 5vector.svg" alt=""></div> -->
     </div>
 </body>
 </html>
