HamMenu Added to all pages!

--- a/article.html
+++ b/article.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="Ham.js"></script>
     <link rel="shortcut icon" href="content/ehsanelderly_LOGO-transparent.ico" type="image/x-icon">
     <title>مقالات</title>
 </head>
 <body>
-    <header>
+    <header>        
         <div class="main_header">
+            <button class="hamburger">
+                <div class="bar"></div>
+            </button>
             <nav class="navbar">
                 <div class="header">
                     <ul>
@@ -26,7 +30,14 @@
                 <div class="loginbtn"><a href="login/login.html">ورود</a></div>
                 <div class="signupbtn"><a href="signup/signup.html">ثبت نام</a></div>
             </div>
-
+            <nav class="mobile-nav">
+                <a href="index.html" id="ham-logo"><img src="content/ehsanelderly_LOGO-transparent.png" alt="logo"></a>
+                <a href="index.html">خانه</a>
+                <a href="gallery/gallery.html">گالری عکس</a>
+                <a href="article.html">مقالات</a>
+                <a href="#">درباره ما</a>
+                <a href="#">تماس با ما</a>
+            </nav>
         </div>
     </header>
     <main>
