--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="../Ham.js"></script>
     <link rel="shortcut icon" href="../content/ehsanelderly_LOGO-transparent.ico" type="image/x-icon">
     <title>گالری عکس</title>
 </head>
 <body>
   <header>
+        
     <div class="main_header">
+        <button class="hamburger">
+            <div class="bar"></div>
+        </button>
         <nav class="navbar">
             <div class="header">
                 <ul>
-                    <li class="logo_image"><a href="../index.html" id="logo-header"><img src="../content/ehsanelderly_LOGO-transparent.png" alt="logo"></a></li>
+                    <li class="logo_image"><a href="../index.html" id="logo-header"><img src="../content/ehsanelderly_LOGO.png" alt="logo"></a></li>
                     <li class="home_nav"><a href="../index.html">خانه</a></li>
                     <li class="gallery_nav"><a href="gallery.html">گالری عکس</a></li>
                     <li class="article_nav"><a href="../article.html">مقالات</a></li>
@@ -25,8 +30,16 @@
         </nav>
         <div class="login_signup">
             <div class="loginbtn"><a href="../login/login.html">ورود</a></div>
-            <div class="signupbtn"><a href="../SignUp/signup.html">ثبت نام</a></div>
+            <div class="signupbtn"><a href="../signup/signup.html">ثبت نام</a></div>
         </div>
+        <nav class="mobile-nav">
+            <a href="../index.html" id="ham-logo"><img src="../content/ehsanelderly_LOGO-transparent.png" alt="logo"></a>
+            <a href="../index.html">خانه</a>
+            <a href="gallery.html">گالری عکس</a>
+            <a href="../article.html">مقالات</a>
+            <a href="#">درباره ما</a>
+            <a href="#">تماس با ما</a>
+        </nav>
     </div>
 </header>
     <div class="gallery">
