--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -67,5 +67,25 @@
         <span class="close" onclick="closeModal()">&times;</span>
         <img id="modalImage" src="" alt="Modal Image">
       </div>
+
+      <footer>
+        <div class="footer">
+            <div class="footer-right">
+                <p><img class="footer-icon" style="width: 20px;height: 20px;" src="../content/old-phone-svgrepo-com.svg" alt=""><a href="+983432518390">034-3251-8390</a></p>
+                <p><img class="footer-icon" style="width: 20px;height: 20px;" src="../content/phone-flip-svgrepo-com.svg" alt=""><a href="+989211461272">0921-146-1272</a></p>
+                <p class="links-title">پیوندها</p>
+                <p><a href="https://www.behzisti.ir/">سازمان بهزیستی کشور</a></p>
+                
+            </div>
+            <div class="footer-left">
+                <img src="../content/ehsanelderly_LOGO-transparent.png" alt="footer logo">
+                <p><img class="footer-icon" style="width: 20px;height: 20px;" src="../content/map-pin-alt-svgrepo-com.svg" alt="">خیابان استقلال، کوچه 10، نبش غربی 7، پلاک 2</p>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 1402 | کلیه حقوق محفوظ میباشد </p>
+            <p class="designers">&#40;: Designed By <a href="https://github.com/asdf-ITeam">asdf Team</a></p>
+        </div>
+    </footer>
 </body>
 </html>
