PhoneNumber links Fixed!

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -71,8 +71,8 @@
       <footer>
         <div class="footer">
             <div class="footer-right">
-                <p><img class="footer-icon" style="width: 20px;height: 20px;" src="../content/old-phone-svgrepo-com.svg" alt=""><a href="+983432518390">034-3251-8390</a></p>
-                <p><img class="footer-icon" style="width: 20px;height: 20px;" src="../content/phone-flip-svgrepo-com.svg" alt=""><a href="+989211461272">0921-146-1272</a></p>
+                <p><img class="footer-icon" style="width: 20px;height: 20px;" src="../content/old-phone-svgrepo-com.svg" alt=""><a href="tel:+983432518390">034-3251-8390</a></p>
+                <p><img class="footer-icon" style="width: 20px;height: 20px;" src="../content/phone-flip-svgrepo-com.svg" alt=""><a href="tel:+989211461272">0921-146-1272</a></p>
                 <p class="links-title">پیوندها</p>
                 <p><a href="https://www.behzisti.ir/">سازمان بهزیستی کشور</a></p>
                 
