AdminPanel header Complited!

--- a/AdminPanel/AdminPanel.html
+++ b/AdminPanel/AdminPanel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,11 @@
     <title>پنل ادمین</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header">
+            <span class="title">به پنل ادمین خوش آمدید!</span>
+            <img src="../content/admin-outlined-white.svg" alt="admin_svg" class="admin_img">
+        </div>
+    </header>
 </body>
 </html>
