First stage completed!

--- a/AdminPanel/AdminPanel.html
+++ b/AdminPanel/AdminPanel.html
@@ -41,7 +41,8 @@
                     <div class="user_list_detail">
                         <div><span>username</span></div>
                         <div><span>password</span></div>
-                    </div>                    
+                    </div>
+                    <div class="seprator"></div>
                 </div>
             </div>
         </div>
