Contact_Us Page Added! home Page activitybox Filled!

--- a/index.html
+++ b/index.html
@@ -48,12 +48,30 @@
             </div>
             <div class="activity_title"><span>فعالیت ها</span></div>
             <div class="activities">
-                <div class="activitybox"><span>box title</span></div>
-                <div class="activitybox"><span>box title</span></div>
-                <div class="activitybox"><span>box title</span></div>
-                <div class="activitybox"><span>box title</span></div>
-                <div class="activitybox"><span>box title</span></div>
-                <div class="activitybox"><span>box title</span></div>
+                <div class="activitybox">
+                    <span class="activitybox_title">سلامت</span>
+                    <p class="activitybox_description">دکترهای متخصص برای مراقبت از سلامت عزیزان شما</p>
+                </div>
+                <div class="activitybox">
+                    <span class="activitybox_title">ورزش</span>
+                    <p class="activitybox_description">ورزش عنصر کلیدی تحرک است. ما به تحرک عزیزانتان اهمیت میدهیم</p>
+                </div>
+                <div class="activitybox">
+                    <span class="activitybox_title">بازی های ذهنی</span>
+                    <p class="activitybox_description">انجام این بازی ها باعث جلوگیری از پیشرفت آلزایمر میشود</p>
+                </div>
+                <div class="activitybox">
+                    <span class="activitybox_title">توان بخشی</span>
+                    <p class="activitybox_description">متخصصان فیزیوتراپ برای درمان و بهبود عزیزانتان</p>
+                </div>
+                <div class="activitybox">
+                    <span class="activitybox_title">هنر درمانی</span>
+                    <p class="activitybox_description">انجام فعالیت هایی مانند نقاشی، شعر خوانی تاثیر زیادی در روحیه سالمندان دارد</p>
+                </div>
+                <div class="activitybox">
+                    <span class="activitybox_title">گردش</span>
+                    <p class="activitybox_description">داشتن گردش های درون شهری برای تنوع و بازدید یکسری اماکن گردشگری</p>
+                </div>
             </div>
             <div class="minigall_title"><div class="title_box"><a href="gallery/gallery.html">گالری</a></div></div>
             <div class="mini_gallery">
